PCS BAckup 26Dec2023/Backup-Source/objects/Vision_GCP_Back_Order_Data__c.object
<CustomObject>
    <fields>
        <fullName>Vision_Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Vision_Dispatch_Week_1__c</fullName>
        <label>Dispatch Week 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Dispatch_Week_2__c</fullName>
        <label>Dispatch Week 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Dispatch_Week_3__c</fullName>
        <label>Dispatch Week 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Forecast__c</fullName>
        <label>Forecast</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_GCP_Product_Family__c</fullName>
        <label>GCP Product Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_GCP_Unique_Identifier__c</fullName>
        <label>GCP Unique Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_In_Train_Inventory__c</fullName>
        <label>In Train Inventory</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Inventory_Date__c</fullName>
        <label>Inventory Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vision_Inventory_QA__c</fullName>
        <label>Inventory QA</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_MTD_Sales__c</fullName>
        <label>MTD Sales</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_NDC_Code__c</fullName>
        <label>NDC Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Open_So__c</fullName>
        <label>Open So</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Product_Family__c</fullName>
        <label>Product Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_SKU_Code__c</fullName>
        <label>SKU Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_SKU_Desc__c</fullName>
        <label>SKU Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Segment__c</fullName>
        <label>Segment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Total_MOH__c</fullName>
        <label>Total MOH</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_UPS_Inv__c</fullName>
        <label>UPS Inv</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Unsold_Forecast__c</fullName>
        <label>Unsold Forecast</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>GCP Back Order Data</label>
    <nameField>
        <displayFormat>GCP back-ord-data-{0000000}</displayFormat>
        <label>GCP Back Order Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GCP Back Order Datas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>